--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+
+.app {
+ 
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header {
+ 
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+p {
+  margin-top: 20px;
+  font-size: 18px;
+}
+.counter {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 8px;
+  width: 220px;
+  text-align: center;
+}
+
+.count-display {
+  font-size: 48px;
+  margin-bottom: 20px;
+}
+
+.controls {
+  display: flex;
+  justify-content: space-between;
+}
+.counterbtn:hover{
+  border-color: blue;
 }
